--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -48,4 +48,4 @@ MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 # Key Information
 MYAPP_UPLOAD_KEY_ALIAS=ReactNativeChat-Key-Alias
 
-NATIVE_DEBUG_ON=TRUE
+NATIVE_DEBUG_ON=FALSE
