--- a/borrowed_modules/react-native-quick-sqlite/android/build.gradle
+++ b/borrowed_modules/react-native-quick-sqlite/android/build.gradle
@@ -109,7 +109,7 @@ android {
   
   buildTypes {
     release {
-      minifyEnabled false
+      ///minifyEnabled false
     }
   }
   lintOptions {
