--- a/borrowed_modules/react-native-quick-sqlite/android/CMakeLists.txt
+++ b/borrowed_modules/react-native-quick-sqlite/android/CMakeLists.txt
@@ -2,15 +2,17 @@ cmake_minimum_required(VERSION 3.10.2)
 
 set (CMAKE_VERBOSE_MAKEFILE ON)
 set (CMAKE_CXX_STANDARD 14)
-set (CMAKE_CXX_FLAGS "-DFOLLY_NO_CONFIG=1 -DFOLLY_HAVE_CLOCK_GETTIME=1 -DFOLLY_HAVE_MEMRCHR=1 -DFOLLY_USE_LIBCPP=1 -DFOLLY_MOBILE=1 -DON_ANDROID -DONANDROID -DANDROID=1 -DFOR_HERMES=${FOR_HERMES}")
+set (CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -DFOLLY_NO_CONFIG=1 -O2 -DFOLLY_HAVE_CLOCK_GETTIME=1 -DFOLLY_HAVE_MEMRCHR=1 -DFOLLY_USE_LIBCPP=1 -DFOLLY_MOBILE=1 -DON_ANDROID -DONANDROID -DANDROID=1 -DFOR_HERMES=${FOR_HERMES}")
+set (CMAKE_C_FLAGS " ${CMAKE_C_FLAGS} -O2 ")
+
 
 set (PACKAGE_NAME "react-native-quick-sqlite")
 set (BUILD_DIR ${CMAKE_SOURCE_DIR}/build)
 set (RN_SO_DIR ${NODE_MODULES_DIR}/react-native/ReactAndroid/src/main/jni/first-party/react/jni)
 
 if (${NATIVE_DEBUG}) 
-        //set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")
-        //set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+        #set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")
+        #set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
 endif()
 
 
@@ -66,9 +68,10 @@ add_library(
   cpp-adapter.cpp
 )
 
-add_definitions(
-  ${SQLITE_FLAGS}
-)
+
+#add_definitions(
+#  ${SQLITE_FLAGS}
+#)
 
 # find fbjni package
 file (GLOB LIBFBJNI_INCLUDE_DIR "${BUILD_DIR}/fbjni-*-headers.jar/")
