add awesome pragmas

--- a/borrowed_modules/react-native-quick-sqlite/android/.settings/org.eclipse.buildship.core.prefs
+++ b/borrowed_modules/react-native-quick-sqlite/android/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=--init-script /var/folders/qz/9bngtnt56rl3zlgplx3s1pjh0000gn/T/init627
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.4.2))
-connection.project.dir=
+connection.project.dir=../../../android
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/opt/homebrew/Cellar/openjdk/17.0.2/libexec/openjdk.jdk/Contents/Home
