--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@formatjs/intl-pluralrules": "^4.0.13",
     "@oguzhnatly/react-native-image-manipulator": "github:Expensify/react-native-image-manipulator#c5f654fc9d0ad7cc5b89d50b34ecf8b0e3f4d050",
     "@onfido/react-native-sdk": "6.0.0",
-    "@pieter-pot/react-native-fast-image": "8.5.11",
+    "react-native-fast-image": "github:WoLewicki/react-native-fast-image#@wolewicki/add-fabric",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/cameraroll": "git+https://github.com/react-native-cameraroll/react-native-cameraroll.git#3f0aed96db68e134f199171c7b06c1b4d6cb382b",
     "@react-native-community/clipboard": "^1.5.1",
@@ -59,7 +59,7 @@
     "@react-native-firebase/app": "^12.3.0",
     "@react-native-firebase/crashlytics": "^12.3.0",
     "@react-native-firebase/perf": "^12.3.0",
-    "@react-native-picker/picker": "^2.4.3",
+    "@react-native-picker/picker": "github:WoLewicki/picker#@wolewicki/add-fabric",
     "@react-navigation/drawer": "github:Expensify/react-navigation#react-navigation-drawer-v6.5.0-alpha1-gitpkg",
     "@react-navigation/native": "6.0.13",
     "@react-navigation/stack": "6.3.2",
@@ -99,7 +99,7 @@
     "react-native-image-size": "git+https://github.com/Expensify/react-native-image-size#6b5ab5110dc3ed554f8eafbc38d7d87c17147972",
     "react-native-modal": "^13.0.0",
     "react-native-onyx": "1.0.29",
-    "react-native-pdf": "^6.6.2",
+    "react-native-pdf": "github:WoLewicki/react-native-pdf#@wolewicki/add-fabric",
     "react-native-performance": "^2.0.0",
     "react-native-permissions": "^3.0.1",
     "react-native-picker-select": "git+https://github.com/Expensify/react-native-picker-select.git#7f09b2c15ffae320d769788f75bdf8948714bb10",
@@ -108,7 +108,7 @@
     "react-native-render-html": "6.3.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
-    "react-native-svg": "^13.5.0",
+    "react-native-svg": "^13.6.0",
     "react-native-webview": "^11.17.2",
     "react-pdf": "5.7.2",
     "react-plaid-link": "3.3.2",
